[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/admin/perm_overwrite_row.gd" id="1"]

[node name="PermOverwriteRow" type="HBoxContainer"]
theme_override_constants/separation = 8
script = ExtResource("1")

[node name="PermLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 13

[node name="AllowButton" type="Button" parent="."]
layout_mode = 2
custom_minimum_size = Vector2(28, 28)
flat = true

[node name="InheritButton" type="Button" parent="."]
layout_mode = 2
custom_minimum_size = Vector2(28, 28)
flat = true

[node name="DenyButton" type="Button" parent="."]
layout_mode = 2
custom_minimum_size = Vector2(28, 28)
flat = true
